# submanager

./: .bandit.yml  .fixit.config.yaml  .flake8  .gitattributes  .gitignore  .isort.cfg  .jscpd.json  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .prettierrc.yaml  .pydocstyle.ini  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  ROADMAP.md  ROADMAP.txt  SECURITY.md  megathread-manager.service  megathreadmanager.py  mypy.ini  pyproject.toml  pytest.ini  requirements-build.in  requirements-build.txt  requirements-dev.txt  requirements-lint.txt  requirements-release.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  submanager.py  submanager.service
.github/workflows/: ci.yaml  codeql-analysis.yaml  lint.yaml  mega-linter.yaml  semgrep-analysis.yaml  test.yaml
src/submanager/: __init__.py  __main__.py  cli.py  constants.py  enums.py  exceptions.py  submanager.service  types.py
src/submanager/config/: __init__.py  dynamic.py  lock.py  static.py  utils.py
src/submanager/core/: __init__.py  commands.py  initialization.py  run.py
src/submanager/endpoint/: __init__.py  base.py  creation.py  endpoints.py
src/submanager/models/: __init__.py  base.py  config.py  example.py  types.py  utils.py
src/submanager/sync/: __init__.py  manager.py  menu.py  processing.py  utils.py
src/submanager/thread/: __init__.py  creation.py  manager.py  sync.py  utils.py
src/submanager/utils/: __init__.py  dicthelpers.py  misc.py  output.py
src/submanager/validation/: __init__.py  accounts.py  connection.py  endpoints.py  offline.py  validate.py
tests/: __init__.py  conftest.py
tests/functional/: __init__.py  conftest.py  test_config_info.py  test_cycle_thread.py  test_generate.py  test_invocation.py  test_run.py  test_service.py  test_start_run.py  test_usage.py  test_validate.py  test_validate_offline.py  test_validate_online.py
tests/functional/data/: offline_config.toml  online.toml  rspacex.toml  rspacex_config.toml  sxtechnical.toml
tests/integration/: test_baseline.py
tests/unit/: test_init.py
tools/: check_env_activated.py  enable_praw_typehints.py  generate_requirements_files.py
