[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 79
target-version = ["py37", "py38", "py39"]
skip-string-normalization = false
skip-magic-trailing-comma = false
fast = false
safe = true
experimental-string-processing = true
