[metadata]
name = submanager
version = attr: submanager.__version__
author = C.A.M. Gerlach and r/SpaceX
author_email = CAM.Gerlach@rSpaceX.com
description = A bot framework for Reddit to manage threads, wiki pages, widgets, menus and more.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE.txt
keywords = reddit api praw
url = https://github.com/r-spacex/submanager
project_urls =
    Github = https://github.com/r-spacex/submanager
    Bug Tracker = https://github.com/r-spacex/submanager/issues
    Demo = https://www.reddit.com/r/SpaceX
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Monitoring
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
zip_safe = False
include_pacakge_data = True
python_requires = >=3.7
install_requires =
    platformdirs>=2.2.0
    praw>=7.2.0
    pydantic>=1.8.0
    python-dateutil>=2.8.0
    requests>=2.23.0
    toml>=0.10.2
    typing-extensions>=3.7.4.3

[options.extras_require]
lint =
    flake8>=3.8.0
    flake8-bugbear>=21.3.1
    flake8-docstrings>=1.4.0
    mypy>=0.900
    pre-commit>=2.10.0
    pyanalyze>=0.2.0
    pydocstyle>=6.0.0
    pylint>=2.9.0
    types-python-dateutil
    types-requests
    types-toml

test =
    packaging>=20.0
    pytest>=6.2.0

[options.entry_points]
console_scripts =
    submanager = submanager.__main__:main

[options.packages.find]
where = src

[options.package_data]
submanager = py.typed
