[metadata]
name = submanager
version = attr: submanager.__version__
description = A bot framework for Reddit to manage threads, wiki pages, widgets, menus and more.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r-spacex/submanager
author = C.A.M. Gerlach and r/SpaceX
author_email = CAM.Gerlach@rSpaceX.com
license = MIT
license_file = LICENSE.txt
license_files =
    LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Monitoring
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Utilities
    Typing :: Typed
keywords = reddit api praw spacex bot subreddit mod moderator
project_urls =
    Github = https://github.com/r-spacex/submanager
    Bug Tracker = https://github.com/r-spacex/submanager/issues
    Demo = https://www.reddit.com/r/SpaceX

[options]
packages = find:
install_requires =
    platformdirs>=2.2.0,<3.0
    praw>=7.3.0,<8.0
    pydantic>=1.8.0,<2.0
    python-dateutil>=2.8.0,<3.0
    requests>=2.23.0,<3.0
    toml>=0.10.2,<1.0
    typing-extensions>=3.7.4.3
python_requires = >=3.7
include_pacakge_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    submanager = submanager.__main__:main

[options.extras_require]
lint =
    mypy>=0.900,<1.0
    pre-commit>=2.10.0,<3.0
    pyanalyze>=0.3.1,<0.4
    pylint>=2.10.0,<2.11
    types-python-dateutil
    types-requests
    types-toml
test =
    packaging>=20.0
    pytest>=6.2.0,<7.0

[options.package_data]
submanager = py.typed, submanager.service
